--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://root:a12345678@cluster0.pukzw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+secret=mysecretword
